Add PolarSSL, and use it for our HTTP connections

--- a/projects/openttd_vs100.vcxproj
+++ b/projects/openttd_vs100.vcxproj
@@ -1224,6 +1224,8 @@
     <ClInclude Include="..\src\network\core\tcp_listen.h" />
     <ClCompile Include="..\src\network\core\tcp_packet.cpp" />
     <ClInclude Include="..\src\network\core\tcp_packet.h" />
+    <ClCompile Include="..\src\network\core\tcp_tls.cpp" />
+    <ClInclude Include="..\src\network\core\tcp_tls.h" />
     <ClCompile Include="..\src\network\core\udp.cpp" />
     <ClInclude Include="..\src\network\core\udp.h" />
     <ClInclude Include="..\src\pathfinder\follow_track.hpp" />
