--- a/projects/openttd_vs90.vcproj
+++ b/projects/openttd_vs90.vcproj
@@ -4260,6 +4260,14 @@
 				>
 			</File>
 			<File
+				RelativePath=".\..\src\network\core\tcp_tls.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\..\src\network\core\tcp_tls.h"
+				>
+			</File>
+			<File
 				RelativePath=".\..\src\network\core\udp.cpp"
 				>
 			</File>
