--- a/projects/openttd_vs100.vcxproj.filters
+++ b/projects/openttd_vs100.vcxproj.filters
@@ -2901,6 +2901,12 @@
     <ClInclude Include="..\src\network\core\tcp_packet.h">
       <Filter>Network Core</Filter>
     </ClInclude>
+    <ClCompile Include="..\src\network\core\tcp_tls.cpp">
+      <Filter>Network Core</Filter>
+    </ClCompile>
+    <ClInclude Include="..\src\network\core\tcp_tls.h">
+      <Filter>Network Core</Filter>
+    </ClInclude>
     <ClCompile Include="..\src\network\core\udp.cpp">
       <Filter>Network Core</Filter>
     </ClCompile>
